--- a/src/sensor/sensor.component.css
+++ b/src/sensor/sensor.component.css
@@ -1,7 +1,3 @@
-.info{
-  text-align: center;
-}
-
 .component-container {
   width: 100%;
   border: 0.15rem solid black;
@@ -11,12 +7,12 @@
 }
 
 .component-container:after {
-  content: "";
+  content: '';
   display: block;
   padding-bottom: 100%;
 }
 
-.center-container{
+.center-container {
   display: flex;
   height: 100%;
   width: 100%;
@@ -50,7 +46,8 @@
   transform: rotate(-45deg);
 }
 
-.min,.max {
+.min,
+.max {
   width: 55%;
   height: 0.15rem;
   background-color: black;
@@ -58,17 +55,17 @@
   margin: auto;
   transform-origin: 100% 0%;
 }
-.min{
+.min {
   transform: rotate(-45deg);
   margin-left: -5%;
 }
 
-.max{
+.max {
   transform: rotate(225deg);
   margin-left: -5%;
 }
 
-.hider{
+.hider {
   background-color: white;
   height: 90%;
   width: 90%;
