--- a/src/sensor/sensor.component.html
+++ b/src/sensor/sensor.component.html
@@ -10,7 +10,7 @@
     <div class="hider"></div>
   </div>
 
-  <div class="center-container arrow-container" [ngStyle]="{'transform': 'rotate(' + this.arrowDegrees + 'deg)'}">
+  <div class="center-container arrow-container" [ngStyle]="arrowStyles">
     <div class="arrow"></div>
   </div>
 
