--- a/src/sensor/sensor.component.html
+++ b/src/sensor/sensor.component.html
@@ -10,8 +10,8 @@
     <div class="hider"></div>
   </div>
 
-  <div class="center-container arrow-container" [ngStyle]="arrowStyles">
-    <div class="arrow"></div>
+  <div class="center-container needle-container" [ngStyle]="needleStyles">
+    <div class="needle"></div>
   </div>
 
   <div class="center-container">
