--- a/src/sensor/sensor.component.css
+++ b/src/sensor/sensor.component.css
@@ -28,12 +28,12 @@
   z-index: 10;
 }
 
-.arrow-container {
-  transition: all 0.4s;
+.needle-container {
+  transition: all 0.3s;
   transform: rotate(0deg);
 }
 
-.arrow {
+.needle {
   width: 50%;
   height: 0.15rem;
   background-color: red;
